# pan_os_upgrade

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  INSTALLATION.md  LICENSE  PROGRESS.md  README.md  USAGE.md  inventory.yaml.example  pan-os-upgrade.txt  pyproject.toml  pytest.ini  requirements.txt  settings.yaml.example  setup_venv.ps1  setup_venv.sh
.github/workflows/: ci.yml
docker/: Dockerfile
docs/: development.md
examples/: README.md  batch_panorama_upgrade.md  single_firewall_upgrade.md
pan_os_upgrade/: __init__.py  __main__.py  main.py
pan_os_upgrade/components/: __init__.py  firewall.py  snapshots.py
pan_os_upgrade/models/: __init__.py  config.py
tests/: test_cli.py  test_components.py
